--- a/dapp/package.json
+++ b/dapp/package.json
@@ -9,13 +9,18 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-inject": "^5.0.1",
+    "babel-preset-solid": "^1.5.7",
     "typescript": "^4.8.2",
-    "vite": "^3.0.9",
-    "vite-plugin-solid": "^2.3.0",
+    "vite": "^3.1.8",
+    "vite-plugin-solid": "^2.3.9",
     "vite-plugin-windicss": "^1.8.7"
   },
   "dependencies": {
-    "algosdk": "^1.19.1",
-    "solid-js": "^1.5.1"
+    "algosdk": "^1.22.0",
+    "buffer": "^6.0.3",
+    "process": "^0.11.10",
+    "solid-js": "^1.5.7",
+    "stream-browserify": "^3.0.0"
   }
 }
