--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "devDependencies": {
     "@rollup/plugin-inject": "^5.0.1",
+    "@types/node": "^18.11.0",
     "babel-preset-solid": "^1.5.7",
     "typescript": "^4.8.2",
     "vite": "^3.1.8",
@@ -18,7 +19,9 @@
   },
   "dependencies": {
     "algosdk": "^1.22.0",
+    "axios": "^1.1.3",
     "buffer": "^6.0.3",
+    "dotenv": "^16.0.3",
     "process": "^0.11.10",
     "solid-js": "^1.5.7",
     "stream-browserify": "^3.0.0"
